refactor: rename Instances and related classes to GameInstances for clarity